# Robot-localization

./: .gitignore  CMakeLists.txt  Clocalization.cpp  MCL_classes.py  MClocalization.py  README.md  last-loc.py  local.py  localization-without-filtering.py  localization1.py  mcl_prob.py  mcl_prob2.py  package.xml  posearray.py  robot-test.py  working.py
srv/: GetCoords.srv
